--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <header id="header-section">
     <div>
-      <img src="./assets/logo-navbar.png" alt="">
+      <img src="assets/logo-navbar.png" alt="">
     </div>
 
     <nav class="nav-item">
@@ -52,7 +52,7 @@
     <div class="banner-btn">
     <button class="common-btn">
   <span>Start Building Your Vault</span>
-  <img src="./assets/ArrowRight.png" alt="">
+  <img src="assets/ArrowRight.png" alt="">
 </button>
 
     <button class="btn"> 
@@ -71,7 +71,7 @@
     <div class="notes-cards">
       <div class="card">
       <div class="icon">
-        <img src="./assets/Vector.png" alt="Scattered Notes">
+        <img src="assets/Vector.png" alt="Scattered Notes">
       </div>
       <h3>Scattered Notes</h3>
       <p>Your ideas live in 10 different apps, none of them connected.</p>
@@ -79,7 +79,7 @@
 
     <div class="card">
       <div class="icon">
-        <img src="./assets/Bookmarks.png" alt="Bookmark Overload">
+        <img src="assets/Bookmarks.png" alt="Bookmark Overload">
       </div>
       <h3>Bookmark Overload</h3>
       <p>Hundreds of saved links you'll never revisit or remember.</p>
@@ -87,7 +87,7 @@
 
     <div class="card">
       <div class="icon">
-        <img src="./assets/Brain.png" alt="No Idea Connections">
+        <img src="assets/Brain.png" alt="No Idea Connections">
       </div>
       <h3>No Idea Connections</h3>
       <p>Insights stay isolated, never building into bigger understanding.</p>
@@ -95,7 +95,7 @@
 
     <div class="card">
       <div class="icon">
-        <img src="./assets/Info.png" alt="Forgetting What You Learned">
+        <img src="assets/Info.png" alt="Forgetting What You Learned">
       </div>
       <h3>Forgetting What You Learned</h3>
       <p>Knowledge fades because there's no system to retain it.</p>
@@ -109,17 +109,17 @@
 
 <section id="brain-section">
   <div class="img">
-    <img src="./assets/knowledge.png" alt="">
+    <img src="assets/knowledge.png" alt="">
   </div>
     <div class="text">
       <p class="color-text">THE SOLUTION</p>
       <h2>Your Second Brain,<br>Structured By Design.</h2>
       <p>Personal Knowledge Vault isn't another note-taking app. <br> It's a thinking environment where every note, link, and summary <br> becomes part of an interconnected web of understanding.</p>
       <ul>
-        <li> <span><img src="./assets/CheckCircle.png" alt=""></span> Capture ideas with structure from day one</li>
-        <li> <span><img src="./assets/CheckCircle.png" alt=""></span> Automatically connect related concepts</li>
-        <li> <span><img src="./assets/CheckCircle.png" alt=""></span> Build lasting knowledge with reflection</li>
-        <li> <span><img src="./assets/CheckCircle.png" alt=""></span> Find anything instantly</li>
+        <li> <span><img src="assets/CheckCircle.png" alt=""></span> Capture ideas with structure from day one</li>
+        <li> <span><img src="assets/CheckCircle.png" alt=""></span> Automatically connect related concepts</li>
+        <li> <span><img src="assets/CheckCircle.png" alt=""></span> Build lasting knowledge with reflection</li>
+        <li> <span><img src="assets/CheckCircle.png" alt=""></span> Find anything instantly</li>
       </ul>
     </div>
 
@@ -132,7 +132,7 @@
       <h2>Ready to think more clearly?</h2>
       <p>Join thousands of learners who are building their personal knowledge vaults. <br>Start free, no credit card required.</p>
       <button class="common-btn">
-        Get Early Access <img src="./assets/ArrowRight.png" alt=""></button>
+        Get Early Access <img src="assets/ArrowRight.png" alt=""></button>
       <p>Free during early access • No credit card needed</p>
     </div>
   </section>
@@ -143,7 +143,7 @@
 
   <div class="footer-top">
     <div class="footer-logo">
-      <img src="./assets/logo-footer.png" alt="Knowledge Vault Logo">
+      <img src="assets/logo-footer.png" alt="Knowledge Vault Logo">
     </div>
 
     <div class="footer-social">
